data conversion done ✅

--- a/FactChecking.ipynb
+++ b/FactChecking.ipynb
@@ -15,26 +15,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import requests\n",
     "import zipfile\n",
+    "import glob\n",
+    "from urllib import request\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "from pprint import pprint\n",
     "import re\n",
     "from functools import reduce\n",
+    "from tqdm import tqdm\n",
     "\n",
     "import nltk\n",
-    "from nltk.corpus import stopwords\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
-    "from tensorflow.keras import layers\n",
-    "from wordcloud import WordCloud"
+    "from tensorflow.keras import layers\n"
    ]
   },
   {
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +227,7 @@
        "4  10\\tThe island 's geography comprises relative...  10   REFUTES  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,8 +237,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is immediately observable that the evidences contain a very raw text, where at beginning there is always a number followed by `\\t` and at the end there is a list of keywords unuseful for the fact checking task.\n",
+    "Morover the rounded brackerts are representes as `-LRB` and `-RRB` and the squared bracked (`-LSB-` and `-RSB-`) usually contain the pronunciation or other worthless text."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +255,7 @@
        "'0\\tLeBron Raymone James -LRB- -LSB- ləˈbrɒn -RSB- born December 30 , 1984 -RRB- is an American professional basketball player for the Cleveland Cavaliers of the National Basketball Association -LRB- NBA -RRB- .\\tNBA\\tNational Basketball Association\\tCleveland Cavaliers\\tCleveland Cavaliers\\tbasketball\\tbasketball\\tNational Basketball Association\\tNational Basketball Association\\tCleveland\\t2006–07 Cleveland Cavaliers season'"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2026,7 +2035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -6090,7 +6099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -6131,7 +6140,7 @@
     "REMOVE_END_EVIDENCES_RE = re.compile(r'\\.\\t.*\\b')\n",
     "SPLIT_COMPOUND_RE = re.compile(r'\\w+(-)\\w+')\n",
     "REMOVE_ROUNDED_BRACKETS_RE = re.compile(r'-LRB-|-RRB-')\n",
-    "REMOVE_BETWEEN_SQUARE_BRACKETS_RE = re.compile(r'-LSB-(.*?)-RSB-')  # usually the text between the square brackets has no meaning\n",
+    "REMOVE_BETWEEN_SQUARE_BRACKETS_RE = re.compile(r'-LSB-(.*?)-RSB-')  # usually the text between the square brackets is worthless\n",
     "GOOD_SYMBOLS_RE = re.compile(r'[^0-9a-z \\'\\.]')\n",
     "\n",
     "def lower(text: str) -> str:\n",
@@ -6232,7 +6241,6 @@
     "                          ]\n",
     "\n",
     "# Anchor method\n",
-    "\n",
     "def text_prepare(text, filter_methods):\n",
     "    \"\"\"\n",
     "    Applies a list of pre-processing functions in sequence (reduce).\n",
@@ -6268,7 +6276,320 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.4 Dataset conversion"
+    "### 1.4 Dataset conversion\n",
+    "The next step consist on the definition of the **text vectorizer** in order to convert the original text into idx sequences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NotAdaptedError(Exception):\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "class TextVectorizer:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        glove_url=\"http://nlp.stanford.edu/data/glove.6B.zip\",\n",
+    "        embedding_dim=100,\n",
+    "        embedding_folder=\"glove\"\n",
+    "    ):\n",
+    "        \"\"\"\n",
+    "        This class parses the GloVe embeddings, the input documents are expected\n",
+    "        to be in the form of a list of lists.\n",
+    "        [[\"word1\", \"word2\", ...], [\"word1\", \"word2\", ...], ...]\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        glove_url : The url of the GloVe embeddings.\n",
+    "        embedding_dim : The dimension of the embeddings (pick one of 50, 100, 200, 300).\n",
+    "        embedding_folder : folder where the embedding will be downloaded\n",
+    "        \"\"\"\n",
+    "        self.embedding_dim = embedding_dim\n",
+    "        self.download_glove_if_needed(\n",
+    "            glove_url=glove_url, embedding_folder=embedding_folder\n",
+    "        )\n",
+    "\n",
+    "        # create the embeddings vocabulary\n",
+    "        self.vocabulary = self.parse_glove(embedding_folder)\n",
+    "\n",
+    "    def download_glove_if_needed(self, glove_url, embedding_folder):\n",
+    "        \"\"\"\n",
+    "        Downloads the glove embeddings from the internet\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        glove_url : The url of the GloVe embeddings.\n",
+    "        embedding_folder: folder where the embedding will be downloaded\n",
+    "        \"\"\"\n",
+    "        # create embedding folder if it does not exist\n",
+    "        if not os.path.exists(embedding_folder):\n",
+    "            os.makedirs(embedding_folder)\n",
+    "\n",
+    "        # extract the embedding if it is not extracted\n",
+    "        if not glob.glob(\n",
+    "            os.path.join(embedding_folder, \"**/glove*.txt\"), recursive=True\n",
+    "        ):\n",
+    "\n",
+    "            # download the embedding if it does not exist\n",
+    "            embedding_zip = os.path.join(embedding_folder, glove_url.split(\"/\")[-1])\n",
+    "            if not os.path.exists(embedding_zip):\n",
+    "                print(\"Downloading the GloVe embeddings...\")\n",
+    "                request.urlretrieve(glove_url, embedding_zip)\n",
+    "                print(\"Successful download!\")\n",
+    "\n",
+    "            # extract the embedding\n",
+    "            print(\"Extracting the embeddings...\")\n",
+    "            with zipfile.ZipFile(embedding_zip, \"r\") as zip_ref:\n",
+    "                zip_ref.extractall(embedding_folder)\n",
+    "                print(\"Successfully extracted the embeddings!\")\n",
+    "            os.remove(embedding_zip)\n",
+    "\n",
+    "    def parse_glove(self, embedding_folder):\n",
+    "        \"\"\"\n",
+    "        Parses the GloVe embeddings from their files, filling the vocabulary.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        embedding_folder : folder where the embedding files are stored\n",
+    "\n",
+    "        Returns\n",
+    "        -------\n",
+    "        dictionary representing the vocabulary from the embeddings\n",
+    "        \"\"\"\n",
+    "        print(\"Creating glove vocabulary...\")\n",
+    "        vocabulary = {\"<pad>\": np.zeros(self.embedding_dim)}\n",
+    "        embedding_file = os.path.join(\n",
+    "            embedding_folder, \"glove.6B.\" + str(self.embedding_dim) + \"d.txt\"\n",
+    "        )\n",
+    "        with open(embedding_file, encoding=\"utf8\") as f:\n",
+    "            for line in f:\n",
+    "                word, coefs = line.split(maxsplit=1)\n",
+    "                coefs = np.fromstring(coefs, \"f\", sep=\" \")\n",
+    "                vocabulary[word] = coefs\n",
+    "        return vocabulary\n",
+    "\n",
+    "    def adapt(self, dataset, columns):\n",
+    "        \"\"\"\n",
+    "        Computes the OOV words for a single data split, and adds them to the vocabulary and recreate the dictionary of index encodings. \n",
+    "        Then build the embedding matrix.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        dataset : The data split (might be training set, validation set, or test set).\n",
+    "        columns : The columns to be adapted.\n",
+    "\n",
+    "        Returns\n",
+    "        ----------\n",
+    "        The embedding matrix of shape (vocabulary_size, embedding_dim)\n",
+    "        \"\"\"\n",
+    "        # create a set containing words from the documents in a given data split\n",
+    "        words = {word for column in columns for sentence in dataset[column] for word in nltk.word_tokenize(sentence)}\n",
+    "        oov_words = words - self.vocabulary.keys()\n",
+    "\n",
+    "        # add the OOV words to the vocabulary giving them a random encoding\n",
+    "        for word in oov_words:\n",
+    "            self.vocabulary[word] = np.random.uniform(-1, 1, size=self.embedding_dim)\n",
+    "\n",
+    "        # create the dictionary of index encodings for the words in the embedding vocabulary (idx 0 is reserved for padding)\n",
+    "        self.word_to_idx = {word: i for i, word in enumerate(self.vocabulary.keys())}\n",
+    "\n",
+    "        # the embedding matrix shape will be (vocabulary_size, embedding_dim)\n",
+    "        self.embedding_matrix = np.array(list(self.vocabulary.values()))\n",
+    "        print(f\"Generated embeddings for {len(oov_words)} OOV words.\")\n",
+    "\n",
+    "    def transform(self, dataset, columns):\n",
+    "        \"\"\"\n",
+    "        Transform the data into the input structure for the training. This method should be used always after the adapt method.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        dataset : The data split (might be training set, validation set, or test set).\n",
+    "        columns : The columns to be transformed.\n",
+    "\n",
+    "        Returns\n",
+    "        -------\n",
+    "        Pair of docuemnts into idx sequences\n",
+    "        \"\"\"\n",
+    "        X_claim, X_evidence = [], []\n",
+    "        for _, row in tqdm(dataset.iterrows(), total=len(dataset), desc=\"Converting data into idx sequences...\"):\n",
+    "            X_claim.append(self._transform_document_to_encoding(row[\"Claim\"]))\n",
+    "            X_evidence.append(self._transform_document_to_encoding(row[\"Evidence\"]))\n",
+    "        return X_claim, X_evidence\n",
+    "\n",
+    "\n",
+    "    def _transform_document_to_encoding(self, document):\n",
+    "        \"\"\"\n",
+    "        Transforms a single document to a list of word encodings.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        document : The document to be transformed.\n",
+    "\n",
+    "        Returns\n",
+    "        -------\n",
+    "        List of word encodings\n",
+    "        \"\"\"\n",
+    "        try:\n",
+    "            return [self.word_to_idx[word] for word in nltk.word_tokenize(document)]\n",
+    "        except KeyError:\n",
+    "            raise NotAdaptedError(\n",
+    "                f\"The whole document is not in the vocabulary. Please adapt the vocabulary first.\"\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's address the **paddind** problem: we need to make sure that each of our inputs are of the same size in order to store them into rectangular matrices. In this experiment the padding size is determined in order to handle the majority of our data (99%)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def encode_input(dataset, columns, vectorizer, is_training=False, max_tokens=None, verbose=False): \n",
+    "    \"\"\"\n",
+    "    Convert the text into a given dataset split into idx sequeces.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    dataset : The data split (might be training set, validation set, or test set).\n",
+    "    columns : The columns to be converted.\n",
+    "    vectorizer : The vectorizer to be used.\n",
+    "    is_training : Whether input texts are from the training split or not\n",
+    "    max_tokens : The max token sequence previously computed with\n",
+    "\n",
+    "    Return\n",
+    "    ---------\n",
+    "    X_claim: a numpy array of shape (num_documents, max_tokens) representing claims\n",
+    "    X_evidence: a numpy array of shape (num_documents, max_tokens) representing evidences\n",
+    "    max_seq_length: the max token sequence computed with training texts.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # compute embeddings for terms in the dataset that are out of vocabulary and add them\n",
+    "    vectorizer.adapt(dataset, columns)\n",
+    "\n",
+    "    # use the vocabulary of word_to_idx built to convert the claim and the evidences into idx sequences\n",
+    "    X_claim, X_evidence = vectorizer.transform(dataset, columns)\n",
+    "\n",
+    "    # compute max_tokens \n",
+    "    if is_training:\n",
+    "        #max_tokens = int(np.quantile([len(seq) for seq in X_claim+X_evidence], 0.99))\n",
+    "        max_tokens = max([len(seq) for seq in X_claim+X_evidence])\n",
+    "    else:\n",
+    "        assert max_tokens is not None\n",
+    "\n",
+    "    # apply padding to idx sequences \n",
+    "    X_claim = [seq + [0] * (max_tokens - len(seq)) for seq in X_claim]\n",
+    "    X_evidence = [seq + [0] * (max_tokens - len(seq)) for seq in X_evidence]\n",
+    "    X_claim = np.stack([seq[:max_tokens] for seq in X_claim])\n",
+    "    X_evidence = np.stack([seq[:max_tokens] for seq in X_evidence])\n",
+    "\n",
+    "\n",
+    "    if is_training:\n",
+    "        return X_claim, X_evidence, max_tokens\n",
+    "    else:\n",
+    "        return X_claim, X_evidence\n",
+    "\n",
+    "\n",
+    "def encode_target(target_series):\n",
+    "    \"\"\"\n",
+    "    Encodes the target column of the dataset\n",
+    "    \"\"\"\n",
+    "    return target_series.apply(lambda x: 1 if x == \"SUPPORTS\" else 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given all the previous building block, we are able to prepare the input and target data for the neural network.\n",
+    "The *embedding matrix* will be stored in `vectorizer.embedding_matrix`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRAINING SET:\n",
+      "Generated embeddings for 2829 OOV words.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Converting data into idx sequences...: 100%|██████████| 121740/121740 [00:55<00:00, 2179.54it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max token sequence: 163\n",
+      "X claim train shape:  (121740, 163)\n",
+      "X evidence train shape:  (121740, 163)\n",
+      "y train shape:  (121740,)\n",
+      "Embeddings matrix shape: (402830, 100)\n",
+      "VALIDATION SET:\n",
+      "Generated embeddings for 264 OOV words.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Converting data into idx sequences...: 100%|██████████| 7165/7165 [00:05<00:00, 1341.50it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X claim val shape:  (7165, 163)\n",
+      "X evidence val shape:  (7165, 163)\n",
+      "y val shape:  (7165,)\n",
+      "Embeddings matrix shape: (403094, 100)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# initialize the vectorizer\n",
+    "vectorizer = TextVectorizer(embedding_dim=100)\n",
+    "\n",
+    "input_columns = [\"Evidence\", \"Claim\"]\n",
+    "target_column = \"Label\"\n",
+    "\n",
+    "# Train\n",
+    "print(\"TRAINING SET:\")\n",
+    "X_claim_train, X_evidence_train, max_tokens = encode_input(train_df, columns=input_columns, vectorizer=vectorizer, is_training=True)\n",
+    "y_train = encode_target(train_df[target_column])\n",
+    "print(\"Max token sequence: {}\".format(max_tokens))\n",
+    "\n",
+    "print('X claim train shape: ', X_claim_train.shape)\n",
+    "print('X evidence train shape: ', X_evidence_train.shape)\n",
+    "print('y train shape: ', y_train.shape)\n",
+    "\n",
+    "# Validation\n",
+    "print(\"\\nVALIDATION SET:\")\n",
+    "X_claim_val, X_evidence_val = encode_input(val_df, columns=input_columns, vectorizer=vectorizer, max_tokens=max_tokens)\n",
+    "y_val = encode_target(val_df[target_column])\n",
+    "\n",
+    "print(\"X claim val shape: \", X_claim_val.shape)\n",
+    "print(\"X evidence val shape: \", X_evidence_val.shape)\n",
+    "print(\"y val shape: \", y_val.shape)"
    ]
   },
   {
@@ -6297,6 +6618,31 @@
    "metadata": {},
    "source": [
     "## 3. Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated embeddings for 308 OOV words.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Converting data into idx sequences...: 100%|██████████| 7189/7189 [00:02<00:00, 3429.87it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test\n",
+    "X_claim_test, X_evidence_test = encode_input(test_df, columns=input_columns, vectorizer=vectorizer, max_tokens=max_tokens)"
    ]
   },
   {
