Add open in colab

--- a/FactChecking.ipynb
+++ b/FactChecking.ipynb
@@ -4,6 +4,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a href=\"https://colab.research.google.com/github/TheOnesThatWereAbroad/Assignment2/blob/main/FactChecking.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install keras-tuner tensorflow-addons\n",
+    "from urllib.request import urlretrieve\n",
+    "\n",
+    "def download_folder(folder_id):\n",
+    "    \"\"\" I copy this one from my old code, use drive API directly (not pydrive) \"\"\"\n",
+    "    # authenticate\n",
+    "    from google.colab import auth\n",
+    "    auth.authenticate_user()\n",
+    "    # get folder_name\n",
+    "    from googleapiclient.discovery import build\n",
+    "    service = build('drive', 'v3')\n",
+    "    folder_name = service.files().get(fileId=folder_id).execute()['name']\n",
+    "    # install library \n",
+    "    url = 'https://github.com/segnolin/google-drive-folder-downloader/raw/master/download.py'\n",
+    "    path = '/usr/local/lib/python3.7/dist-packages/download.py'\n",
+    "    urlretrieve(url, path)\n",
+    "    # recursive download\n",
+    "    import download\n",
+    "    download.download_folder(service, folder_id, './', folder_name)\n",
+    "    return folder_name\n",
+    "  \n",
+    "download_folder('1Ec8iRzONGmZ7Z9J8dCs4x-mVxei5wOgO')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Assignment 2 - Fact checking\n",
     "\n",
     "This notebook propose a solution to particular and emerging NLP task, formally known as **fact checking** (or fake checking). As AI techniques become more and more powerful, reaching amazing results, such as image and text generation, it is more than ever necessary to build tools able to distinguish what is real from what is fake.\n",
@@ -15,9 +52,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\peppe\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import requests\n",
@@ -33,6 +80,7 @@
     "from tqdm import tqdm\n",
     "\n",
     "import nltk\n",
+    "nltk.download('punkt')\n",
     "import tensorflow as tf\n",
     "import keras_tuner as kt\n",
     "from tensorflow import keras\n",
@@ -6650,7 +6698,7 @@
    "source": [
     "# check if the encoding of input is correct using an instance (consider a sentence cutted from padding)\n",
     "print(\"Original evidence: \", train_df['Evidence'][8127])\n",
-    "print(\"Encoded  evidence: \", X_evidence_train[8127])\n",
+    "print(\"Encoded  evidence: \", list(X_evidence_train[8127]))\n",
     "print(\"Decoded  evidence: \", [vectorizer.idx_to_word[idx] for idx in X_evidence_train[8127]])"
    ]
   },
@@ -6712,14 +6760,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class AvgSentenceEmbedding(layers.Layer):\n",
-    "\n",
-    "    def call(self, inputs, mask=None, training=False, **kwargs):\n",
-    "        float_mask = tf.cast(mask, inputs.dtype)\n",
-    "        masked_inputs = inputs * float_mask[:, :, None]\n",
-    "        return tf.reduce_sum(masked_inputs, axis=1) / tf.reduce_sum(float_mask, axis=1)[:, None]\n",
-    "\n",
-    "\n",
     "def build_model(max_tokens, embedding_matrix, choice_info, compile_info):\n",
     "    \"\"\"\n",
     "    Use functional API of tf.keras to build the model.\n",
@@ -7103,7 +7143,8 @@
     "epochs_training = 100\n",
     "callbacks_training = [keras.callbacks.EarlyStopping(monitor='val_accuracy', patience=10, mode=\"max\", restore_best_weights=True)]\n",
     "\n",
-    "history_base = model_base.fit({\"claim\": X_claim_train, \"evidence\": X_evidence_train}, y_train, epochs=epochs_training, batch_size=batch_size_train,  validation_data=({\"claim\": X_claim_val, \"evidence\": X_evidence_val}, y_val), callbacks=callbacks_training)"
+    "history_base = model_base.fit({\"claim\": X_claim_train, \"evidence\": X_evidence_train}, y_train, epochs=epochs_training, batch_size=batch_size_train,  validation_data=({\"claim\": X_claim_val, \"evidence\": X_evidence_val}, y_val), callbacks=callbacks_training)\n",
+    "history_base = history_base.history"
    ]
   },
   {
@@ -7163,7 +7204,8 @@
     }
    ],
    "source": [
-    "history_ext = model_ext.fit({\"claim\": X_claim_train, \"evidence\": X_evidence_train}, y_train, epochs=epochs_training, batch_size=batch_size_train,  validation_data=({\"claim\": X_claim_val, \"evidence\": X_evidence_val}, y_val), callbacks=callbacks_training)"
+    "history_ext = model_ext.fit({\"claim\": X_claim_train, \"evidence\": X_evidence_train}, y_train, epochs=epochs_training, batch_size=batch_size_train,  validation_data=({\"claim\": X_claim_val, \"evidence\": X_evidence_val}, y_val), callbacks=callbacks_training)\n",
+    "history_ext = history_ext.history"
    ]
   },
   {
@@ -7246,18 +7288,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load models\n",
     "models_path = \"models\"\n",
-    "model = tf.keras.models.load_model(os.path.join(models_path, \"model_base\"))"
+    "model_base = tf.keras.models.load_model(os.path.join(models_path, \"model_base\"))\n",
+    "model_ext= tf.keras.models.load_model(os.path.join(models_path, \"model_ext\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7277,7 +7320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -7345,7 +7388,7 @@
     "    plt.grid(linestyle='--', linewidth=1)\n",
     "    plt.show()\n",
     "\n",
-    "models_history = [history_base.history, history_ext.history]\n",
+    "models_history = [history_base, history_ext]\n",
     "model_names = [\"Base model\", \"Extended model\"]\n",
     "plot_history(models_history, keys=['loss', 'val_loss'], model_names=model_names, labels=(\"epochs\", \"loss\"), y_scale=\"log\", figsize=(15,7),  cmap='bwr')\n",
     "plot_history(models_history, keys=['accuracy', 'val_accuracy'], model_names=model_names, labels=(\"epochs\", \"accuracy\"), figsize=(15,7),  cmap='bwr')"
