--- a/FactChecking.ipynb
+++ b/FactChecking.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "4  10\\tThe island 's geography comprises relative...  10   REFUTES  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6151,7 +6151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -6360,7 +6360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6529,7 +6529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6596,7 +6596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -6613,7 +6613,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Converting data into idx sequences...: 100%|██████████| 121740/121740 [00:46<00:00, 2624.39it/s]\n"
+      "Converting data into idx sequences...: 100%|██████████| 121740/121740 [00:37<00:00, 3263.85it/s]\n"
      ]
     },
     {
@@ -6633,7 +6633,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Converting data into idx sequences...: 100%|██████████| 7165/7165 [00:02<00:00, 2671.77it/s]\n"
+      "Converting data into idx sequences...: 100%|██████████| 7165/7165 [00:02<00:00, 2772.85it/s]\n"
      ]
     },
     {
@@ -6650,7 +6650,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Converting data into idx sequences...: 100%|██████████| 7189/7189 [00:02<00:00, 2660.39it/s]\n"
+      "Converting data into idx sequences...: 100%|██████████| 7189/7189 [00:02<00:00, 3368.80it/s]\n"
      ]
     },
     {
@@ -6693,6 +6693,7 @@
     "print(\"y val shape: \", y_val.shape)\n",
     "\n",
     "# Test\n",
+    "print(\"\\nTEST SET:\")\n",
     "X_claim_test, X_evidence_test = encode_input(test_df, columns=input_columns, vectorizer=vectorizer, max_tokens=max_tokens)\n",
     "y_test = encode_target(test_df[target_column])\n",
     "\n",
@@ -7386,7 +7387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7746,7 +7747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7792,7 +7793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7841,7 +7842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
