--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -1,17 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Assignment_2.ipynb",
-      "provenance": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -129,6 +116,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -136,6 +124,18 @@
         "id": "BspxZcRjW0NG",
         "outputId": "23dd2947-797f-4d0a-e307-7666d1e2e7ae"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Downloading FEVER data splits...\n",
+            "Download completed!\n",
+            "Extracting dataset...\n",
+            "Extraction completed!\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "import requests\n",
@@ -172,19 +172,6 @@
         "        print(\"Extraction completed!\")\n",
         "\n",
         "download_data('dataset')"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading FEVER data splits...\n",
-            "Download completed!\n",
-            "Extracting dataset...\n",
-            "Extraction completed!\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
@@ -588,5 +575,22 @@
         "---"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "Assignment_2.ipynb",
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.9.7"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
